[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/art/Menus/pngtree-ancient-greece-scene-historic-mythology-image_1454876.jpg" type="Texture" id=1]
[ext_resource path="res://assets/art/Menus/greek pattern.jpg" type="Texture" id=2]
[ext_resource path="res://Menus/ParallaxBackground.gd" type="Script" id=3]
[ext_resource path="res://Menus/Options.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.141176, 0.0509804, 0.054902, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.141176, 0.0509804, 0.054902, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.141176, 0.0509804, 0.054902, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0784314, 0.00784314, 0.0117647, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.141176, 0.0509804, 0.054902, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.141176, 0.0509804, 0.054902, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.141176, 0.0509804, 0.054902, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.0784314, 0.00784314, 0.00784314, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.141176, 0.0509804, 0.054902, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.141176, 0.0509804, 0.054902, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.141176, 0.0509804, 0.054902, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.0784314, 0.00784314, 0.00784314, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[node name="OptionsMenu" type="Node2D"]
script = ExtResource( 4 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource( 3 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1632, 606 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 450, 300 )
scale = Vector2( 1.7, 1.7 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
visible = false
texture = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
margin_left = 400.0
margin_top = 150.0
margin_right = 400.0
margin_bottom = 150.0

[node name="ButtonEasy" type="Button" parent="Control"]
margin_right = 52.0
margin_bottom = 20.0
rect_scale = Vector2( 3, 3 )
custom_colors/font_color = Color( 0.866667, 0.47451, 0.156863, 1 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 1 )
text = "FÁCIL"

[node name="ButtonNormal" type="Button" parent="Control"]
margin_top = 100.0
margin_right = 79.0
margin_bottom = 120.0
rect_scale = Vector2( 3, 3 )
custom_colors/font_color = Color( 0.866667, 0.47451, 0.156863, 1 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "NORMAL"

[node name="ButtonHard" type="Button" parent="Control"]
margin_top = 200.0
margin_right = 48.0
margin_bottom = 220.0
rect_scale = Vector2( 3, 3.31077 )
custom_colors/font_color = Color( 0.866667, 0.47451, 0.156863, 1 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
text = "DIFÍCIL"

[connection signal="pressed" from="Control/ButtonEasy" to="." method="_on_ButtonEasy_pressed"]
[connection signal="pressed" from="Control/ButtonNormal" to="." method="_on_ButtonNormal_pressed"]
[connection signal="pressed" from="Control/ButtonHard" to="." method="_on_ButtonHard_pressed"]
